--- a/auth-api/pom.xml
+++ b/auth-api/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>auth</artifactId>
         <groupId>com.baiyan</groupId>
+        <artifactId>auth</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.baiyan</groupId>
-            <artifactId>auth-common</artifactId>
+            <artifactId>baiyan-common-api</artifactId>
         </dependency>
     </dependencies>
 
