--- a/auth-rpc/pom.xml
+++ b/auth-rpc/pom.xml
@@ -14,6 +14,10 @@
     <dependencies>
         <dependency>
             <groupId>com.baiyan</groupId>
+            <artifactId>baiyan-common-rpc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baiyan</groupId>
             <artifactId>auth-api</artifactId>
         </dependency>
         <dependency>
