--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>auth-sdk</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.baiyan</groupId>
+            <artifactId>baiyan-common-service</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
